deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scalable-api
  labels:
    app: scalable-api
    version: 1.0.0
spec:
  replicas: 3
  selector:
    matchLabels:
      app: scalable-api
  template:
    metadata:
      labels:
        app: scalable-api
        version: 1.0.0
    spec:
      containers:
      - name: scalable-srv
        image: khaosdoctor/scalable-node-api
        ports:
        - name: http
          containerPort: 8080
          protocol: TCP
