all-in-one.yaml
apiVersion: v1
kind: Service
metadata:
  name: scalable-api
  labels:
    app: scalable-api
spec:
  selector:
    app: scalable-api
  ports:
  - protocol: TCP
    port: 8086
    name: svc-port
    targetPort: http
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: scalable-api
  annotations:
    kubernetes.io/ingress.class: addon-http-application-routing
spec:
  rules:
  - host: simpleapi.f8b8184f326740f9b169.eastus.aksapp.io
    http:
      paths:
      - backend:
          serviceName: scalable-api
          servicePort: svc-port
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scalable-api
  labels:
    app: scalable-api
    version: 1.0.0
spec:
  replicas: 3
  selector:
    matchLabels:
      app: scalable-api
  template:
    metadata:
      labels:
        app: scalable-api
        version: 1.0.0
    spec:
      containers:
      - name: scalable-srv
        image: khaosdoctor/scalable-node-api
        ports:
        - name: http
          containerPort: 8080
          protocol: TCP
