ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: scalable-api
  annotations:
    kubernetes.io/ingress.class: addon-http-application-routing
spec:
  rules:
  - host: simpleapi.f8b8184f326740f9b169.eastus.aksapp.io
    http:
      paths:
      - backend:
          serviceName: scalable-api
          servicePort: svc-port
